# sampleTRT

./: .gitattributes  CMakeLists.txt  conanfile.py  sampleTRT.cpp  sampleTRTLib.cpp
cuda100/armv8/lib/: libcublas.so.10.0.326  libcudart.so.10.0  libcudart.so.10.0.326  libcufft.so.10.0  libcufft.so.10.0.326  libcufftw.so.10.0  libcufftw.so.10.0.326  libcuinj64.so.10.0.326  libcurand.so.10.0  libcurand.so.10.0.326  libcusolver.so.10.0.326  libcusparse.so.10.0  libcusparse.so.10.0.326  libnppc.so.10.0  libnppc.so.10.0.326  libnppial.so.10.0  libnppial.so.10.0.326  libnppicc.so.10.0.326  libnppicom.so.10.0  libnppicom.so.10.0.326  libnppidei.so.10.0.326  libnppif.so.10.0.326  libnppig.so.10.0.326  libnppim.so.10.0.326  libnppist.so.10.0.326  libnppisu.so.10.0  libnppisu.so.10.0.326  libnppitc.so.10.0.326  libnpps.so.10.0.326  libnvToolsExt.so.1.0.0  libnvblas.so.10.0.326  libnvgraph.so.10.0.326  libnvrtc-builtins.so.10.0  libnvrtc-builtins.so.10.0.326  libnvrtc.so.10.0.326  rename2.sh
cuda102/armv8/lib/: libcudart.so.10.2.89  libcufft.so.10  libcufft.so.10.1.2.89  libcufftw.so.10  libcufftw.so.10.1.2.89  libcuinj64.so.10.2  libcuinj64.so.10.2.89  libcupti.so.10.2.75  libcurand.so.10  libcurand.so.10.1.2.89  libcusolver.so.10.3.0.89  libcusparse.so.10  libcusparse.so.10.3.1.89  libnppc.so.10.2.1.89  libnppial.so.10  libnppial.so.10.2.1.89  libnppicc.so.10  libnppicc.so.10.2.1.89  libnppicom.so.10  libnppicom.so.10.2.1.89  libnppidei.so.10.2.1.89  libnppif.so.10  libnppif.so.10.2.1.89  libnppig.so.10  libnppig.so.10.2.1.89  libnppim.so.10  libnppim.so.10.2.1.89  libnppist.so.10.2.1.89  libnppisu.so.10.2.1.89  libnppitc.so.10.2.1.89  libnpps.so.10  libnpps.so.10.2.1.89  libnvgraph.so.10  libnvgraph.so.10.2.89  (+3 more)
data/input/: input.rgb
data/model/: deploy.prototxt
protobuf/armv8/: conaninfo.txt  conanmanifest.txt
tensorrt6/armv8/: conaninfo.txt  conanmanifest.txt
tensorrt7/armv8/: conaninfo.txt  conanmanifest.txt
(+32 files in other folders)
